--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@
         <img src="pics/final...c1.png" class="d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="1000">
-        <img src="pics/pii.avif" class="d-block w-100 img-fluid" alt="..." style="height: 600px; width: 800px;">
+        <img src="pics/pii.avif" class="d-block w-100 img-fluid" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
