--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@
         <img src="pics/chnge.jpg" class="d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="1000">
-        <img src="pics/c5.avif" class="d-block w-100 img-fluid" alt="...">
+        <img src="pics/chnge.jpg" class="d-block w-100 img-fluid" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
