--- a/public/index.html
+++ b/public/index.html
@@ -151,10 +151,10 @@
     <br>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="1000">
-        <img src="pics/chnge.jpg" class="d-block w-100 img-fluid" alt="...">
+        <img src="pics/ct.jpg" class="d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="1000">
-        <img src="pics/chnge.jpg" class="d-block w-100 img-fluid" alt="...">
+        <img src="pics/ct.jpg" class="d-block w-100 img-fluid" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
