--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
     <br>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="1000">
-        <img src="pics/Add a little bit of body text.png" class="d-block w-100 img-fluid" alt="...">
+        <img src="pics/addnew.png" class="d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="1000">
         <img src="pics/Add a little bit of body text.png" class="d-block w-100 img-fluid" alt="...">
