--- a/public/index.html
+++ b/public/index.html
@@ -148,10 +148,10 @@
   </nav>
   <br>
   <div id="carouselExampleAutoplaying" class="carousel slide pointer-event" data-bs-ride="carousel">
-    <br>
+    <br><br>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="1000">
-        <img src="pics/addnew.png" class="d-block w-100 img-fluid" alt="...">
+        <img src="pics/Add a little bit of body text.png" class="d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="1000">
         <img src="pics/Add a little bit of body text.png" class="d-block w-100 img-fluid" alt="...">
@@ -227,7 +227,7 @@
           <div class="card mb-3">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="pics/guidance.avif" class="img-fluid rounded-start" alt="...">
+                <img src="pics/sir pic.jpg" class="img-fluid rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
