--- a/public/index.html
+++ b/public/index.html
@@ -244,7 +244,7 @@
           <div class="card mb-3">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="pics/resssss.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="pics/myprojectpic.jpg" class="img-fluid rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
